--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <h1> I will not be talking about dogs </h1>
         <img src = "https://i.pinimg.com/736x/69/cc/a5/69cca563c9fba14da67365662d1d308d.jpg"></img>
-        <p> Dogs aren't fun </p>
+        <p> but dogs are also beautiful and cute and gorgeous </p>
 
         <pre>
 the old pond. 
