--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <title> This is my first fancy website </title>
-    <body>
+    <title> This is Isabela's first fancy website </title>
+    <body style="font-family: Arial, Helvetica, sans-serif;">
 
-        <h1> I'll be talking about cats </h1>
+        <h1 style="color:black; text-align: center; background-color: bisque;">This is Isabela's first fancy website: </h1>
+        <p style="font-size:xx-large solid turquoise;"> More about me: </p>
         <img src = "https://i.pinimg.com/736x/34/29/7e/34297ef5581065623c97ad4c1c6e067a.jpg"></img>
         <p> Cats are beautiful and cute and gorgeous </p>
 
