--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <body style="font-family: Arial, Helvetica, sans-serif;">
 
         <h1 style="color:black; text-align: center; background-color: bisque;">This is Isabela's first fancy website: </h1>
-        <p style="font-size:xx-large solid turquoise;"> More about me: </p>
-        <img src = "https://i.pinimg.com/736x/34/29/7e/34297ef5581065623c97ad4c1c6e067a.jpg"></img>
-        <p> Cats are beautiful and cute and gorgeous </p>
+        <p style="font-size:x-large; border:2px solid turquoise;"> I'll talk about Cats: </p>
+        <img src = "cat_img.jpg" width = "200"></img>
+        <p style = "font-size: x-large; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> Cats are professionals at doing absolutely nothing and still looking adorable. 
+        One minute they're sleeping like angels, and the next they're running around the house at 3 a.m. 
+        like they pay rent. No matter what they do, they always manage to make us laugh. </p>
 
-        <h1> I will not be talking about dogs </h1>
-        <img src = "https://i.pinimg.com/736x/69/cc/a5/69cca563c9fba14da67365662d1d308d.jpg"></img>
-        <p> but dogs are also beautiful and cute and gorgeous </p>
+        <h1 style="font-size:x-large; border: 2px solid turquoise;"> I will not be talking too much about dogs: </h1>
+        <img src = "https://i.pinimg.com/736x/69/cc/a5/69cca563c9fba14da67365662d1d308d.jpg" width ="200"></img>
+        <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: x-large;"> But dogs are pure sunshine with four legs. They love running around, wagging their tails, 
+            and following the people they care about. </p>
 
         <pre>
 the old pond. 
