--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             and following the people they care about. </p>
 
         <pre>
-the old pond. 
-A frog jumped in. 
-Plop.
+        <h1 style="border: 2px solid turquoise; font-size: x-large;"> A little poem: </h1>
+        the old pond. 
+        A frog jumped in. 
+        Plop.
         </pre>
 
 </body>
