--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title> This is Isabela's first fancy website </title>
+    <title> This Isabela's first fancy website </title>
     <body style="font-family: Arial, Helvetica, sans-serif;">
 
         <h1 style="color:black; text-align: center; background-color: bisque;">This is Isabela's first fancy website: </h1>
